# fast-api-todo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/app/: main.py
src/app/database/: __init__.py  todo_model.py
src/app/models/: __init__.py  todo.py
src/app/routers/: __init__.py  todos.py
src/app/services/: __init__.py  todo.py
